--- a/terraform-setup/apply-on-master-cluster/health.yaml
+++ b/terraform-setup/apply-on-master-cluster/health.yaml
@@ -26,7 +26,7 @@ spec:
     - name: health-curl
       default: "-k"
     - name: tools-image
-      default: quay.io/aminrachyd/ibmcloud-dev:latest
+      default: quay.io/aminerachyd/ibmcloud-dev:latest
     - name: resource-type
       default: ""
   steps:
@@ -77,6 +77,16 @@ spec:
             echo "grpc protocol"
             GRPC_ADDR="${APP_NAME}:$(kubectl get service ${APP_NAME} -n ${APP_NAMESPACE} --output=jsonpath='{ .spec.ports[0].port }')"
             grpc_health_probe -addr ${GRPC_ADDR}
+            while [[ $? -ne 0 ]]; do
+                sleep 30
+                echo "Health check failure. Remaining retries: $sleep_countdown"
+                sleep_countdown=$((sleep_countdown-1))
+                if [[ $sleep_countdown -eq 0 ]]; then
+                        echo "Could not reach health endpoint: ${URL}"
+                        exit 1;
+                fi
+                grpc_health_probe -addr ${GRPC_ADDR}
+            done
         elif [[ "${PROTOCOL}" == "https" ]]; then
             while [[ $(curl ${CURL_FLAGS} -sL -w "%{http_code}\\n" "${URL}" -o /dev/null --connect-timeout 3 --max-time 5 --retry 3 --retry-max-time 30) != "200" ]]; do
                 sleep 30
