--- a/terraform-setup/apply-on-builder-clusters/build-tag-push-task.yaml
+++ b/terraform-setup/apply-on-builder-clusters/build-tag-push-task.yaml
@@ -24,8 +24,6 @@ spec:
       default: "currencyservice"
     - name: image-tag
       default: "latest"
-    - name: registry-user
-    - name: registry-password
     - name: BUILDER_IMAGE
       default: quay.io/buildah/stable:v1.18.0
     - name: DOCKERFILE
@@ -91,6 +89,16 @@ spec:
               name: ibm-entitled-registry-credentials
               key: IBM_ENTITLED_REGISTRY_PASSWORD
               optional: true
+        - name: REGISTRY_USER
+          valueFrom:
+            secretKeyRef:
+              name: docker-registry-access
+              key: REGISTRY_USER
+        - name: REGISTRY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: docker-registry-access
+              key: REGISTRY_PASSWORD
       volumeMounts:
         - mountPath: /var/lib/containers
           name: varlibcontainers
@@ -104,9 +112,9 @@ spec:
         fi
         buildah --layers --storage-driver=$(params.STORAGE_DRIVER) bud --format=$(params.FORMAT) --tls-verify=$(params.TLSVERIFY) -f $(params.DOCKERFILE) -t ${APP_IMAGE} $(params.CONTEXT)
         set +x
-        if [[ -n "$(params.registry-user)" ]] && [[ -n "$(params.registry-password)" ]] && [[ "$(params.image-server)" != "image-registry.openshift-image-registry.svc:5000"  ]]; then
-          buildah login -u "$(params.registry-user)" -p "$(params.registry-password)" "$(params.image-server)"
-          echo "buildah login -u \"$(params.registry-user)\" -p \"xxxxx\" \"$(params.image-server)\""
+        if [[ -n "$REGISTRY_USER" ]] && [[ -n "$REGISTRY_PASSWORD" ]] && [[ "$(params.image-server)" != "image-registry.openshift-image-registry.svc:5000"  ]]; then
+          buildah login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" "$(params.image-server)"
+          echo "buildah login -u \"$REGISTRY_USER\" -p \"xxxxx\" \"$(params.image-server)\""
         fi
 
         set -x
